Bug fix for button height on mobile

--- a/index.css
+++ b/index.css
@@ -410,9 +410,10 @@ iframe {
   border: 2px solid #E9EEF0;
   border-radius: 5pt;
   width: 100%;
-  max-height: 52px;
+  max-height: auto;  /* required for smooth transition */
   overflow: hidden;
-  transition: all 0.4s;
+  transition: color 0.4s;
+  transition: border 0.4s;
 }
 
 .text-outside:hover {
